--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -73,7 +73,56 @@
 	display: block;
 }
 
-@include media ($medium-screen-up) {
+.menu-toggle {
+	position: absolute;
+	right: 37px;
+	top: 24px;
+	border: 0;
+	padding: 0;
+	font-size: 30px;
+	line-height: 1;
+	outline: 0;
+	color: black;
+
+	&:hover, &:active, &:focus {
+		background: transparent;
+		outline: 0;
+		border: 0;
+		color: inherit;
+	}
+}
+
+.main-navigation.toggled {
+	
+	.menu-toggle {
+		z-index: 9999999;
+		color: white;
+	}	
+
+	ul {
+		position: fixed;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		left: 0;
+		padding-top: 100px;
+		background: rgba(0,0,0,0.9);
+		z-index: 9999;
+
+		li {
+			float: left;
+			width: 100%;
+			margin: 0;
+
+			a {
+				line-height: 3;
+				color: white;
+			}
+		}
+	}
+}
+
+@include media ($large-screen-up) {
 	.menu-toggle {
 		display: none;
 	}
