--- a/sass/site/layout/_header.scss
+++ b/sass/site/layout/_header.scss
@@ -1,6 +1,19 @@
 #masthead {
 	@include row;
 
+	position: fixed;
+	z-index: 10;
+	width: 100%;
+	height: 53px;
+	background: white;
+
+	@include media ($large-screen-up) {
+		height: auto;
+		height: auto;
+		background-color: transparent;
+	}
+
+
 	.container {
 		position: relative;
 	}
@@ -9,11 +22,22 @@
 		top: 0;
 	    position: absolute;
 	    background: $brand-primary;
-	    @include rem(padding, 20px 20px);
+		@include rem(padding, 13px 13px);
+		width: 80px;
+
+		@include media ($large-screen-up) {
+	    	@include rem(padding, 20px 20px);
+	    	width: auto;
+		}
 	}
 
 	.contact-info {
 		@include rem(padding-top, 20px);
+		display: none;
+
+		@include media ($large-screen-up) {
+			display: block;
+		}
 	}
 
 	.main-navigation {
@@ -65,6 +89,7 @@
 	}
 
 	#social {
+
 		float: right;
 		clear: both;
 		//@include rem(padding-top, 23px);
