--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -19,17 +19,24 @@
 
     h1 {
     	max-width: 480px;
+    	@include rem(font-size, 36px);
+    	@include rem(padding, 0 20px);
+
+    	@include media ($medium-screen-up) {
+    		padding: 0;
+    		@include rem(font-size, 56px);
+    	}
     }
 }
 
 .bleed-left {
-	position: absolute;
-	left: 0;
+	//position: absolute;
+	//left: 0;
 }
 
 .bleed-right {
-	position: absolute;
-	right: 0;
+	//position: absolute;
+	//right: 0;
 }
 
 .pagination, .post-navigation {
@@ -38,11 +45,19 @@
 
 	.nav-links {
 		@include outer-container;
-		@include rem(padding, 25px 0);
+		@include rem(padding, 25px 20px);
+
+		@include media ($large-screen-up) {
+			@include rem(padding, 25px 0);
+		}
 	}
 
 	.prev-next-posts {
-		@include rem(padding, 25px 0);
+		@include rem(padding, 25px 20px);
+
+		@include media ($large-screen-up) {
+			@include rem(padding, 25px 0);
+		}
 	}
 
 	.prev-posts-link, .next-posts-link, .nav-next, .nav-previous {
@@ -64,6 +79,19 @@
 			background-image: url(assets/arrow-right-black.svg);
 			background-position: right center;
 			padding-right: 23px;
+
+			width: 19px;
+			overflow: hidden;
+			display: inline-block;
+			text-indent: -9999px;
+
+			@include media ($medium-screen-up) {
+				display: block;
+				overflow: visible;
+				width: 100%;
+				text-indent: 0;
+			}
+
 		}
 	}
 
@@ -74,14 +102,44 @@
 			background-image: url(assets/arrow-left-black.svg);
 			background-position: left center;
 			padding-left: 23px;
+
+			width: 19px;
+			overflow: hidden;
+			display: inline-block;
+			text-indent: -9999px;
+
+			@include media ($medium-screen-up) {
+				display: block;
+				overflow: visible;
+				width: 100%;
+				text-indent: 0;
+			}
 		}
 	}
 }
 
+#car_search {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	z-index: 6;
+	background: rgba(0,0,0,0.7);
+	@include rem(padding, 20px);
+
+	@include media ($medium-screen-up) {
+		@include rem(padding, 40px);
+	}
+
+}
+
 .search-box {
 	margin: 0 auto;
-	max-width: 768px;
-	padding: 0 24px;
+	max-width: 100%;
+
+	@include media ($medium-screen-up) {
+		max-width: 768px;
+		padding: 0 24px;
+	}
 
 	#loading {
 		position: absolute;
@@ -104,6 +162,7 @@
 	}
 
 	p {
+		display: none;
 		float: left;
 		width: 34%;
 		color: #999999;
@@ -111,11 +170,16 @@
 		line-height: 3.1;
 		margin: 0;
 		padding: 0px 10px;
+
+		@include media ($medium-screen-up) {
+			display: block;
+		}
+
 	}
 
 	select {
 		float: left;
-		width: 23%;
+		width: 50%;
 		color: #999999;
 		background: white;
 		border-radius: 0;
@@ -130,20 +194,163 @@
 		background-position: 97% center;
 		background-size: 10px auto;
 		-webkit-appearance: none;
+
+		@include media ($medium-screen-up) {
+			width: 23%;
+		}
+
 	}
 
 	#search_cars {
 		float: left;
-		width: 20%;
+		width: 100%;
 		color: white;
 		border: 0;
 		background: #666666;
 		padding: 0 10px;
 		text-align: center;
 		line-height: 3.1;
+
+		@include media ($medium-screen-up) {
+			width: 20%;
+		}
+
 	}
 
 }
+
+#vehicle_results_box {
+	background: #f9f9f9;
+
+	#loader {
+		transition: all 300ms ease-in-out;
+
+		h3 {
+			padding: 40px;
+			text-align: center;
+			margin: 0;
+			font-size: 18px;
+			text-transform: uppercase;
+			transition: all 300ms ease-in-out;
+		}
+
+		&.hide {
+			opacity: 0;
+
+			h3 {
+				padding: 10px;
+			}
+		}
+	}
+
+	.search_result {
+		float: left;
+		width: 100%;
+		margin-bottom: 17px;
+		border-bottom: 1px solid #000;
+		padding-bottom: 17px;
+
+		&:last-of-type {
+			border-bottom: 0;
+		}
+		
+		.img {
+			float: left;
+			width: 30%;
+			margin-bottom: 15px;
+
+			@include media ($medium-screen-up) {
+				width: 100%;
+			}
+		}
+
+		img {
+			float: left;
+			width: 100%;
+
+			&:after {
+				content: "Awaiting Iamge";
+				display: block;
+				font-size: 16px;
+				color: #333333;
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				text-align: center;
+				background: #cccccc;
+				padding: 98px 0;
+			}
+		}
+
+		.vehicle_info {
+			float: left;
+			width: 100%;
+
+			@include media ($medium-screen-up) {
+				width: 70%;
+				padding-left: 30px;
+			}
+
+			.title {
+				float: left;
+				clear: none;
+				margin: 0 0 20px 0;
+				font-size: 25px;
+				line-height: 1;
+			}
+
+			.price {
+				float: left;
+				clear: none;
+				margin-bottom: 20px;
+				color: $brand-secondary;
+				font-size: 25px;
+				line-height: 1;
+
+				@include media ($medium-screen-up) {
+					float: right;
+				}
+
+				&:before {
+					content: "£";
+				}
+			}
+
+			.synopsis {
+				float: left;
+				width: 100%;
+			}
+
+			.read-mores {
+				float: left;
+				width: 100%;
+				text-align: right;
+
+				a {
+					padding: 15px;
+					margin-bottom: 15px;
+					border: 1px solid;
+					float: right;
+					width: 100%;
+					text-align: center;
+
+					&:last-of-type {
+						margin-bottom: 0;
+					}
+
+					@include media ($medium-screen-up) {
+						width: auto;
+						margin-bottom: 0;
+						margin-left: 15px;
+					}
+
+				}
+			}
+		}
+	}
+}
+
 
 /*==============================
 =            HOME             =
@@ -151,21 +358,7 @@
 
 .home {
 
-	#car_search {
-		position: absolute;
-		bottom: 0;
-		width: 100%;
-		z-index: 6;
-		background: rgba(0,0,0,0.7);
-		padding: 40px;
-	}
-
 	#masthead {
-		@include media ($medium-screen-up) {
-			position: absolute;
-    		width: 100%;
-		    z-index: 999;
-    	}
 
     	#phone {
     		display: none;
@@ -246,14 +439,20 @@
 			max-width: 480px;
 			margin-left: auto;
 			margin-right: auto;
+			padding: 0 20px;
 		}
 
 		h2 {			
 			text-align: center;
 			color: white;
-			@include rem(font-size, 56px);
+			@include rem(font-size, 36px);
 			text-transform: uppercase;
 			margin: 0;
+
+
+			@include media ($medium-screen-up) {
+				@include rem(font-size, 56px);	
+			}
 		}
 
 		a {
@@ -288,9 +487,13 @@
 		}
 
 		h2 {
-			@include rem(font-size, 56px);
+			@include rem(font-size, 36px);
 			text-transform: uppercase;
 			margin: 0;
+
+			@include media ($medium-screen-up) {
+				@include rem(font-size, 56px);
+			}
 		}
 
 		p {
@@ -298,6 +501,7 @@
 			font-size: 16px;
 			font-weight: 300;
 			margin-top: 5px;
+			padding: 0 20px;
 		}
 
 		a {
@@ -316,14 +520,22 @@
 
 		.secondary-text {
 			float: left;
-			width: 33.333%;
+			width: 100%;
 			min-height: 400px;
 			height: 100%;
+
+			@include media ($medium-screen-up) {	
+				width: 33.333%;
+			}
 
 			.table {
 				max-width: 250px;
 				margin: auto;
 				@include rem(padding, 50px 0);
+
+				@include media ($medium-screen-up) {
+					@include rem(padding, 50px 20px);
+				}
 			}
 
 			.more {
@@ -340,17 +552,26 @@
 
 		.secondary-images {
 			float: left;
-			width: 66.666%;
+			width: 100%;
 			min-height: 400px;
 			height: 100%;
 
+			@include media ($medium-screen-up) {	
+				width: 66.666%;
+			}
+
 			.img {
 				float: left;
-				width: 50%;
-				height: 100%;
+				width: 100%;
+				height: 250px;
 				background-repeat: no-repeat;
 				background-size: cover;
-				background-position: center;
+				background-position: top center;
+
+				@include media ($medium-screen-up) {	
+					width: 50%;
+					height: 100%;
+				}
 
 
 				.more {
@@ -378,11 +599,16 @@
 
 		.tertiary-img {
 			float: left;
-			width: 66.666%;
-			height: 550px;
+			width: 100%;
+			height: 250px;
 			background-repeat: no-repeat;
 			background-size: cover;
 			background-position: center;
+
+			@include media ($medium-screen-up) {
+				width: 66.666%;
+				height: 550px;
+			}
 
 			h3, a {
 				color: white;
@@ -391,6 +617,7 @@
 			.caption {
 				margin: 0 auto;
 				display: inline-block;
+				padding: 0 20px;
 			}
 
 			h3 {
@@ -414,14 +641,23 @@
 
 		.tertiary-text {
 			float: right;
-			width: 33.333%;
+			width: 100%;
 			min-height: 400px;
 			height: 100%;
+
+			@include media ($medium-screen-up) {
+				width: 33.333%;
+			}
 
 			.table {
 				max-width: 250px;
 				margin: auto;
 				@include rem(padding, 50px 0);
+
+				@include media ($medium-screen-up) {
+					@include rem(padding, 50px 20px);
+				}
+
 			}
 
 			.more {
@@ -517,11 +753,16 @@
 	.cta-text {
 
 		h3 {
-			@include rem(font-size, 42px);
+			@include rem(font-size, 32px);
 			color: white;
 			text-transform: uppercase;
 			margin: 0 auto;
 			line-height: 0.875;
+			@include rem(padding, 0 20px);
+
+			@include media ($medium-screen-up) {
+				@include rem(font-size, 42px);
+			}
 		}
 
 		p {
@@ -530,6 +771,10 @@
 			@include rem(font-size, 16px);
 			margin: 0;
 			font-weight: 300;
+			@include rem(padding, 0 20px);
+
+			@include media ($medium-screen-up) {
+			}
 		}
 
 		.more {
@@ -616,16 +861,25 @@
 	width: 100%;
 
 	.feature_thumb {
-		height: 400px;
+		height: 250px;
 		background-repeat:no-repeat;
 		background-size: cover;
 		background-position: center;
+
+		@include media ($medium-screen-up) {
+			height: 400px;
+		}
 	}
+
 
 	#left-section {
 		position: relative;
 		float: left;
-		width: 66.66%;
+		width: 100%;
+
+		@include media ($medium-screen-up) {
+			width: 66.66%;
+		}
 
 		.gallery {
 			float: left;
@@ -643,14 +897,25 @@
 
 			.enquiry {
 				float: left;
-				width: 50%;
-				height: 100%;
+				width: 100%;
+				height: 250px;
 				background-color: $brand-secondary;	
+
+				@include media ($medium-screen-up) {
+					width: 50%;
+					height: 100%;
+				}
 
 				ul {
 					list-style: none;
-					width: 169px;
+					width: 100%;
 					margin: 0 auto;
+					padding: 0 20px;
+
+					@include media ($medium-screen-up) {
+						width: 169px;
+						padding: 0px;
+					}
 
 					li {
 
@@ -683,7 +948,11 @@
 
 			.secondary-img {
 				float: left;
-				width: 50%;
+				width: 100%;
+
+				@include media ($medium-screen-up) {
+					width: 50%;
+				}
 
 				img {
 				width: 100%;
@@ -695,7 +964,11 @@
 	#right-section {
 		position: relative;
 		float: right;
-		width: 33.33%;
+		width: 100%;
+
+		@include media ($medium-screen-up) {
+			width: 33.33%;
+		}
 
 		.tertiary-img {
 			width: 100%;
@@ -705,10 +978,25 @@
 			}
 		}
 
+		.feature_thumb {
+			height: 250px;
+			background-repeat:no-repeat;
+			background-size: cover;
+			background-position: center;
+
+			@include media ($medium-screen-up) {
+				height: 100px;
+			}
+
+			@include media ($large-screen-up) {
+				height: 400px;
+			}
+		}
+
 		.vehicle-details {
 			max-width: 250px;
 			margin: auto;
-			@include rem(padding, 50px 0);
+			@include rem(padding, 50px 20px);
 
 			dl {
 				dt, dd {
@@ -744,18 +1032,25 @@
 	.intro-text {
 		@include row;
 		width: 100%;
-		text-align: center;
+		text-align: left;
+		@include rem(padding, 0 20px);
 
 		@include media ($medium-screen-up) {
 			width: 100%;
+			text-align: center;
 			max-width: 870px;
 			margin-left: auto;
 			margin-right: auto;
+			@include rem(padding, 0 20px 40px);
 		}
 
 		hr {
 			width: 40px;
-			@include rem(margin, 15px auto);
+			@include rem(margin, 15px 0);
+
+			@include media ($medium-screen-up) {
+				@include rem(margin, 15px auto);
+			}
 		}
 
 		p {
@@ -767,9 +1062,14 @@
 		@include row;
 		width: 100%;
 		max-width: 880px;
-		@include rem(margin-top, 50px);
 		margin-left: auto;
 		margin-right: auto;
+		padding: 0 20px;
+
+		@include media ($large-screen-up) {
+			padding: 0;
+			@include rem(margin-top, 50px);
+		}
 
 		.column {
 			@include span-columns(12);
@@ -833,14 +1133,19 @@
 	
 		.left_section {
 			float: left;
-			width: 33.333%;
-			min-height: 400px;
-			height: 100%;
+			width: 100%;
+			min-height: 250px;
+
+			@include media ($medium-screen-up) {
+				width: 33.333%;
+				min-height: 400px;
+				height: 100%;
+			}
 
 			.table {
 				max-width: 250px;
 				margin: auto;
-				@include rem(padding, 50px 0);
+				@include rem(padding, 50px 20px);
 			}
 
 			.more {
@@ -857,18 +1162,28 @@
 
 		.right_section {
 			float: right;
-			width: 66.666%;
-			min-height: 400px;
-			height: 400px;
+			width: 100%;
+			height: 500px;
+
+			@include media ($medium-screen-up) {
+				width: 66.666%;
+				min-height: 400px;
+				height: 400px;
+			}
 		}
 
 		.img {
 			float: left;
-			width: 50%;
-			height: 100%;
+			width: 100%;
+			height: 250px;
 			background-repeat:no-repeat;
 			background-size: cover;
 			background-position: center;
+			
+			@include media ($medium-screen-up) {
+				width: 50%;
+				height: 100%;
+			}
 		}
 	}
 
@@ -876,14 +1191,19 @@
 	
 		.right_section {
 			float: right;
-			width: 33.333%;
-			min-height: 400px;
-			height: 100%;
+			width: 100%;
+
+			@include media ($medium-screen-up) {
+				display: block;
+				width: 33.333%;
+				min-height: 400px;
+				height: 100%;
+			}
 
 			.table {
 				max-width: 250px;
 				margin: auto;
-				@include rem(padding, 50px 0);
+				@include rem(padding, 50px 20px);
 			}
 
 			.more {
@@ -900,9 +1220,14 @@
 
 		.left_section {
 			float: left;
-			width: 66.666%;
-			min-height: 400px;
-			height: 400px;
+			display: none;
+
+			@include media ($medium-screen-up) {
+				display: block;
+				width: 66.666%;
+				min-height: 400px;
+				height: 400px;
+			}
 		}
 
 		.img {
@@ -923,32 +1248,54 @@
 .blog {
 
 	#content {
-		@include rem(margin, 50px 0);
+		@include rem(padding, 100px 0 0 0);
 	}
 }
 
 .site-content {
 
 	.post {
+		margin-bottom: 20px;
+		padding-bottom: 20px;
+		border-bottom: 1px solid black;
 
 		.container {
 
 			.entry-content {
 				float: left;
-				width: 50%;
+				width: 100%;
+				margin-top: 0;
+				margin-right: 0;
+
+				@include media ($medium-screen-up) {
+					width: 45%;
+					margin-right: 20px;
+				}
 			}
 
 			.entry-image, .read-more {
 				float: left;
-				width: 23%;
-				@include rem(margin-top, 50px);
+				width: 100%;
+				@include rem(margin-top, 0);
+				margin-right: 0;
 				background: #080707;
+
+				@include media ($medium-screen-up) {
+					width: 23%;
+					margin-right: 20px;
+					//@include rem(margin-top, 50px);
+				}
 
 				a {
 					color: white;
 					height: 100%;
 					width: 100%;
 					display: block;
+					padding: 20px 0;
+
+					@include media ($medium-screen-up) {
+						padding: 0;
+					}
 
 					h2 {
 						color: white;
