--- a/sass/site/layout/_header.scss
+++ b/sass/site/layout/_header.scss
@@ -6,13 +6,26 @@
 	width: 100%;
 	height: 53px;
 	background: white;
+	transition: background-color 300ms;
 
 	@include media ($large-screen-up) {
 		height: auto;
 		height: auto;
 		background-color: transparent;
-	}
+		
+		&.scrolled {
+			background: white;
 
+			#social ul li a {
+				color: #080707 !important;
+				border-color: #080707 !important;
+			}
+
+			#social p {
+				color: #080707 !important;
+			}
+		}
+	}
 
 	.container {
 		position: relative;
