--- a/sass/site/layout/_header.scss
+++ b/sass/site/layout/_header.scss
@@ -11,7 +11,7 @@
 	@include media ($large-screen-up) {
 		height: auto;
 		height: auto;
-		background-color: transparent;
+		background-color: rgba(255,255,255,0.8);
 		
 		&.scrolled {
 			background: white;
