--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -437,10 +437,11 @@
 	    }
 
 		.caption {
-			max-width: 480px;
+			max-width: 580px;
 			margin-left: auto;
 			margin-right: auto;
 			padding: 0 20px;
+			text-align: center;
 		}
 
 		h2 {			
@@ -462,7 +463,8 @@
 			background-repeat: no-repeat;
 			background-size: 21px 19px;
 			padding: 0 0 23px 0;
-			float: right;
+			//float: right;
+			float: none;
 			color: white;
 			text-transform: uppercase;
 			margin-top: 5px;
@@ -1036,13 +1038,19 @@
 		text-align: left;
 		@include rem(padding, 0 20px);
 
+		p {
+			&:first-of-type {
+				margin-bottom: 0;
+			}
+		}
+
 		@include media ($medium-screen-up) {
 			width: 100%;
 			text-align: center;
 			max-width: 870px;
 			margin-left: auto;
 			margin-right: auto;
-			@include rem(padding, 0 20px 40px);
+			@include rem(padding, 0 20px 0);
 		}
 
 		hr {
