--- a/sass/site/layout/_header.scss
+++ b/sass/site/layout/_header.scss
@@ -77,7 +77,7 @@
 						opacity: 0;
 						height: 2px;
 						position: absolute;
-						background-color: $medium-gray;
+						background-color: black;
 						width: 100%;
 						left: 0;
 						bottom: -3px;
@@ -87,10 +87,10 @@
 
 	    		&:active, &:hover, &:focus {
 	    			
-	    			color: $medium-gray;
+	    			color: black;
 
 	    			a {
-	    				color: $medium-gray;
+	    				color: black;
 
 	    				&:after {
 	    					opacity: 1;
