--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -14,7 +14,7 @@
     }
 
     .row {
-    	background-color:  rgba(0,0,0,0.15);
+    	//background-color:  rgba(0,0,0,0.15);
     }
 
     h1 {
@@ -78,7 +78,7 @@
 		a {
 			background-image: url(assets/arrow-right-black.svg);
 			background-position: right center;
-			padding-right: 23px;
+			padding-right: 33px;
 
 			width: 19px;
 			overflow: hidden;
@@ -101,7 +101,7 @@
 		a {
 			background-image: url(assets/arrow-left-black.svg);
 			background-position: left center;
-			padding-left: 23px;
+			padding-left: 33px;
 
 			width: 19px;
 			overflow: hidden;
@@ -399,15 +399,15 @@
 					}
 
 					&:hover {
-						color: white;
-						border-color: white;
+						color: black;
+						border-color: black;
 
 						a {
-							color: white;
+							color: black;
 
 		    				&:after {
 	    						opacity: 1;
-	    						background-color: white;
+	    						background-color: black;
 	   						}
 						}
 					}
@@ -1155,6 +1155,10 @@
 				max-width: 250px;
 				margin: auto;
 				@include rem(padding, 50px 20px);
+
+				@include media ($large-screen-up) {
+					@include rem(padding, 50px 0);
+				}
 			}
 
 			.more {
@@ -1213,6 +1217,10 @@
 				max-width: 250px;
 				margin: auto;
 				@include rem(padding, 50px 20px);
+
+				@include media ($medium-screen-up) {
+					@include rem(padding, 50px 0);
+				}
 			}
 
 			.more {
