--- a/style.css
+++ b/style.css
@@ -1919,6 +1919,10 @@ a {
       margin: auto;
       padding: 50px 20px;
       padding: 5rem 2rem; }
+      @media screen and (min-width: 1046px) {
+        .car-details #right-section .vehicle-details {
+          padding: 50px 0px;
+          padding: 5rem 0px; } }
       .car-details #right-section .vehicle-details dl dt, .car-details #right-section .vehicle-details dl dd {
         float: left;
         width: 50%;
